FontAwesome V5 updates; dark mode partial fix

--- a/static/css/add.css
+++ b/static/css/add.css
@@ -44,3 +44,53 @@
     clear: both;
     display: table;
 }
+
+svg[class^="svg-inline--fa"],
+svg[class*="svg-inline--fa"] {
+    margin-right: .25em;
+    margin-left: .25em;
+}
+
+#header .darkMode {
+    height: inherit;
+    line-height: inherit;
+    margin-left: 1.5em;
+    overflow: hidden;
+    padding-left: 1em;
+    padding-right: 1em;
+    float: right;
+}
+
+#header .darkMode a {
+    /* Theoretically for IE 8 & 9 (more valid) */
+    /* ...but not required as filter works too */
+    /* should come BEFORE filter */
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=65)";
+    /* This works in IE 8 & 9 too */
+    /* ... but also 5, 6, 7 */
+    filter: alpha(opacity=65);
+    /* Modern Browsers */
+    opacity: 0.65;
+}
+
+
+}
+@media screen and (max-width: 980px) {
+    #header .darkmode {
+        display: none;
+    }
+}
+#header .darkMode ul li {
+    border-left: solid 1px rgba(160, 160, 160, 0.3);
+    border-right: solid 1px rgba(160, 160, 160, 0.3);
+    line-height: 1;
+    padding-left: 1em;
+    padding-left: 1em;
+}
+#header .darkMode ul li a {
+    border-bottom: 0;
+    font-size: 1em;
+    font-weight: 800;
+    letter-spacing: 0.25em;
+    text-transform: uppercase;
+}
