--- a/static/css/main.css
+++ b/static/css/main.css
@@ -635,9 +635,11 @@ form.search:before,
 form.contact:before {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: FontAwesome;
+    font-family: "Font Awesome 5 Free";
+    /* updated font-family */
+    font-weight: 400;
+    /* regular style/weight */
     font-style: normal;
-    font-weight: normal;
     text-transform: none !important;
     color: #aaaaaa;
     content: '\f002';
@@ -723,9 +725,11 @@ textarea:active {
 .select-wrapper:before {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: FontAwesome;
+    font-family: "Font Awesome 5 Free";
+    /* updated font-family */
+    font-weight: 400;
+    /* regular style/weight */
     font-style: normal;
-    font-weight: normal;
     text-transform: none !important;
     color: rgba(160, 160, 160, 0.3);
     content: '\f078';
@@ -783,9 +787,11 @@ input[type="radio"]+label {
 input[type="radio"]+label:before {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: FontAwesome;
+    font-family: "Font Awesome 5 Free";
+    /* updated font-family */
+    font-weight: 400;
+    /* regular style/weight */
     font-style: normal;
-    font-weight: normal;
     text-transform: none !important;
     background: #f6f9ff;
     border: solid 1px rgba(160, 160, 160, 0.3);
@@ -852,9 +858,11 @@ input[type="radio"]+label:before {
 .icon:before {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: FontAwesome;
+    font-family: "Font Awesome 5 Free";
+    /* updated font-family */
+    font-weight: 400;
+    /* regular style/weight */
     font-style: normal;
-    font-weight: normal;
     text-transform: none !important;
 }
 
@@ -1017,9 +1025,7 @@ ul.icons li>* {
 ul.icons li>*:before {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: FontAwesome;
     font-style: normal;
-    font-weight: normal;
     text-transform: none !important;
 }
 
@@ -1060,14 +1066,20 @@ ul.actions.pagination .next:after {
     content: "";
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: FontAwesome;
+    font-family: "Font Awesome 5 Free";
+    /* updated font-family */
+    font-weight: 400;
+    /* regular style/weight */
     font-style: normal;
-    font-weight: normal;
     text-transform: none !important;
 }
 
 ul.actions.pagination .next:after {
-    content: '\f054';
+    font-family: "Font Awesome 5 Free";
+    /* updated font-family */
+    font-weight: 400;
+    /* regular style/weight */
+    content: "\f061";
 }
 
 ul.actions.pagination .previous {
@@ -1078,14 +1090,20 @@ ul.actions.pagination .previous:before {
     content: "";
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: FontAwesome;
+    font-family: "Font Awesome 5 Free";
+    /* updated font-family */
+    font-weight: 400;
+    /* regular style/weight */
     font-style: normal;
-    font-weight: normal;
     text-transform: none !important;
 }
 
 ul.actions.pagination .previous:before {
-    content: '\f053';
+    font-family: "Font Awesome 5 Free";
+    /* updated font-family */
+    font-weight: 400;
+    /* regular style/weight */
+    content: '\f060';
 }
 
 @media screen and (max-width: 980px) {
@@ -1413,7 +1431,7 @@ dl dd {
 }
 
 .post>header .title h2 {
-    font-weight: 900;
+    font-weight: 800;
     font-size: 1.5em;
 }
 
@@ -1712,7 +1730,7 @@ dl dd {
 }
 
 .itemized>header .title h2 {
-    font-weight: 900;
+    font-weight: 800;
     font-size: 1.25em;
 }
 
@@ -2108,9 +2126,11 @@ table>tbody>tr>td:first-child {
     table>tbody>tr>td:first-child:after {
         float: right;
         content: "\f107";
-        font-family: FontAwesome;
+        font-family: "Font Awesome 5 Free";
+        /* updated font-family */
+        font-weight: 400;
+        /* regular style/weight */
         font-style: normal;
-        font-weight: normal;
         text-decoration: inherit;
         transition: all .35s;
     }
@@ -2259,12 +2279,12 @@ body {
 #header ul {
     list-style: none;
     margin: 0;
-    padding-left: 0;
+    margin-left: 0;
 }
 
 #header ul li {
     display: inline-block;
-    padding-left: 0;
+    margin-left: 1em;
 }
 
 #header h1 {
@@ -2390,9 +2410,11 @@ body {
 #header .main ul li>a:before {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: FontAwesome;
+    font-family: "Font Awesome 5 Free";
+    /* updated font-family */
+    font-weight: 400;
+    /* regular style/weight */
     font-style: normal;
-    font-weight: normal;
     text-transform: none !important;
 }
 
@@ -2743,6 +2765,7 @@ body.is-menu-visible #wrapper {
 #menu>* {
     border-top: solid 1px rgba(160, 160, 160, 0.3);
     padding: 3em;
+    padding-right: 1.5em;
 }
 
 #menu>*> :last-child {
